[package]
name = "crypto"
version = "0.1.0"
authors = ["Spencer Judd <spencercjudd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9.0"
hmac = "0.9.0"
ripemd160 = "0.9.1"
secp256k1 = "0.17.2"
sha2 = "0.9.1"

http = "0.2.1"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
